--- a/Flashcards/task/src/index.html
+++ b/Flashcards/task/src/index.html
@@ -3,61 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Flashcards</title>
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1>Flashcards</h1>
-<div>
-    <p>
-        Egypt
-    </p>
+<header>
+    <h1 id="title">Flashcards</h1>
+</header>
+<div id="board">
+    <div class="question row-1 col-1">
+        <p>Egypt</p>
+    </div>
+
+    <div class="question row-1 col-2">
+        <p>Palestine</p>
+    </div>
+
+    <div class="question row-1 col-3">
+        <p>Syria</p>
+    </div>
+
+    <div class="question row-2 col-1">
+        <p>Yemen</p>
+    </div>
+
+    <div class="question row-2 col-2">
+        <p>Morocco</p>
+    </div>
+
+
+    <div class="question row-2 col-3">
+        <p>Mauritania</p>
+    </div>
+
+    <div class="question row-3 col-1">
+        <p>Algeria</p>
+    </div>
+
+    <div class="question row-3 col-2">
+        <p>Tunisia</p>
+    </div>
+
+    <div class="question row-3 col-3">
+        <p>Libya</p>
+    </div>
 </div>
 
-<div>
-    <p>
-        palestine
-    </p>
-</div>
-
-<div>
-    <p>
-        Syria
-    </p>
-</div>
-
-<div>
-    <p>
-        Yemen
-    </p>
-</div>
-
-<div>
-    <p>
-        Morocco
-    </p>
-</div>
-
-<div>
-    <p>
-        Mauritania
-    </p>
-</div>
-
-<div>
-    <p>
-        Algeria
-    </p>
-</div>
-
-<div>
-    <p>
-        Tunisia
-    </p>
-</div>
-
-<div>
-    <p>
-        Libya
-    </p>
-</div>
 </body>
 </html>
